--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,11 +4,11 @@
 
 
 uidir = $(pkgdatadir)/ui
-ui_DATA = ui/relay.ui ui/server_window.ui
+ui_DATA = ui/relay.ui ui/server_window.ui ui/relay.png
 
 assetsdir = $(pkgdatadir)/assets
-assets_DATA = assets/server_run.png \
-	ui/relay.png
+assets_DATA = ui/relay.png \
+	assets/server_icon.png
 
 AM_CPPFLAGS = \
     -DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
