--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,6 +10,12 @@ assetsdir = $(pkgdatadir)/assets
 assets_DATA = ui/relay.png \
 	assets/server_icon.png
 
+appicondir = $(datadir)/icons/hicolor/scalable/apps
+appicon_DATA = ui/relay.png
+
+desktopdir = $(datadir)/applications
+desktop_DATA = ../relay.desktop
+
 AM_CPPFLAGS = \
     -DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
     -DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
@@ -24,10 +30,19 @@ AM_CFLAGS =\
 bin_PROGRAMS = relay
 
 relay_SOURCES = \
-    config.vapi connection.vala main_window.vala sqlclient.vala server_manager.vala channel_tab.vala message.vala irc.vala relay.vala rich_text.vala
+    config.vapi \
+    connection.vala \
+    main_window.vala \
+    sqlclient.vala \
+    server_manager.vala \
+    channel_tab.vala \
+    message.vala \
+    irc.vala \
+    relay.vala \
+    rich_text.vala
 
 relay_VALAFLAGS =  \
-    -X -DGETTEXT_PACKAGE="relay" --target-glib 2.32 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3  -g --save-temps
+    -X -DGETTEXT_PACKAGE="relay" --target-glib 2.32 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3
 
 
 relay_LDFLAGS = \
