--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,30 @@ assetsdir = $(pkgdatadir)/assets
 assets_DATA = ui/relay.png \
 	assets/server_icon.png \
     assets/paste.png \
-    assets/theme.css
+    assets/theme.css \
+    assets/check@2.svg \
+    assets/check-active@2.svg \
+    assets/check-active.svg \
+    assets/check-focus@2.svg \
+    assets/check-focus.svg \
+    assets/check.svg \
+    assets/pane-handle.svg \
+    assets/radio@2.svg \
+    assets/radio-active@2.svg \
+    assets/radio-active.svg \
+    assets/radio.svg \
+    assets/switch-off-dark@2.svg \
+    assets/switch-off-dark.svg \
+    assets/switch-off-disabled-dark@2.svg \
+    assets/switch-off-disabled-dark.svg \
+    assets/switch-on-dark@2.svg \
+    assets/switch-on-dark.svg \
+    assets/switch-slider-dark@2.svg \
+    assets/switch-slider-dark.svg \
+    assets/switch-slider-focus@2.svg \
+    assets/switch-slider-focus.svg \
+    assets/switch-slider.svg
+
 
 appicondir = $(datadir)/icons/hicolor/scalable/apps
 appicon_DATA = ui/relay.png
